# rolling-backtest-evalkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: synthetic.yaml
data/: demand.csv
docs/: determinism.md  leakage.md  methodology.md
reports/: baseline_metrics.csv
src/evalkit/: __init__.py  backtest.py  cli.py  datagen.py  features.py  leakage.py  metrics.py  models.py  quality.py  report.py  run.py
tests/: test_backtest.py  test_cli.py  test_datagen.py  test_features.py  test_leakage.py  test_metrics.py  test_models.py  test_quality.py
